# datalakehouse-study

./: .gitignore  404.html  README.md  index.html  project_analysis.md  pyproject.toml  sitemap.xml
delta/: index.html
docs/: delta.md  iceberg.md  index.md  spark.md
iceberg/: index.html
notebooks/: delta_lake.ipynb  iceberg.ipynb
notebooks/tmp/iceberg_warehouse/default/iceberg_events/data/: .00005-5-246c892a-82e2-47c4-89e0-74ac16e7e1ae-0-00001.parquet.crc  .00010-10-246c892a-82e2-47c4-89e0-74ac16e7e1ae-0-00001.parquet.crc  .00015-15-246c892a-82e2-47c4-89e0-74ac16e7e1ae-0-00001.parquet.crc  .00015-32-17801502-4da6-4f5e-b382-87992e1b82a2-0-00001.parquet.crc  00005-5-246c892a-82e2-47c4-89e0-74ac16e7e1ae-0-00001.parquet  00010-10-246c892a-82e2-47c4-89e0-74ac16e7e1ae-0-00001.parquet  00015-15-246c892a-82e2-47c4-89e0-74ac16e7e1ae-0-00001.parquet  00015-32-17801502-4da6-4f5e-b382-87992e1b82a2-0-00001.parquet
notebooks/tmp/iceberg_warehouse/default/iceberg_events/metadata/: .25666788-d4d0-4675-8125-a5c5eac322d9-m0.avro.crc  .a1bf554d-f541-4224-a4e6-63e5fe609467-m0.avro.crc  .snap-6598174834384201436-1-a1bf554d-f541-4224-a4e6-63e5fe609467.avro.crc  .snap-6740213276046522860-1-25666788-d4d0-4675-8125-a5c5eac322d9.avro.crc  .v1.metadata.json.crc  .v2.metadata.json.crc  .v3.metadata.json.crc  .v4.metadata.json.crc  25666788-d4d0-4675-8125-a5c5eac322d9-m0.avro  a1bf554d-f541-4224-a4e6-63e5fe609467-m0.avro  (+6 more)
projeto/: README.md  mkdocs.yml
projeto/docs/: delta.md  iceberg.md  spark.md
projeto/notebooks/: iceberg.ipynb
search/: search_index.json
spark/: index.html
