[tool.poetry]
name = "datalakehouse-study"
version = "0.1.0"
description = "Estudo prático de Delta Lake e Apache Iceberg com PySpark"
authors = ["DataLakehouse Study Team"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "3.5.1"
delta-spark = "3.2.0"
jupyterlab = "^4.0"
ipykernel = "^6.0"
pandas = "^2.0"
pyarrow = "^14.0"
mkdocs = "^1.5"
mkdocs-material = "^9.5"
ipywidgets = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
